fix table layout on mobile

--- a/src/styles/components/_tables.scss
+++ b/src/styles/components/_tables.scss
@@ -80,9 +80,9 @@
       z-index: $z-index-default;
     }
 
-    //.stats-table--spacer {
-    //  padding-left: 17rem;
-    //}
+    .stats-table--spacer {
+      padding-left: 17rem;
+    }
   }
 }
 
